# practical-rust-book

./: .gitignore  FOREWORD.md  README.md
chapter01/01_hello_world/: Cargo.toml
chapter02/02_hello_world_variable/: Cargo.toml
chapter02/04_immutability/: Cargo.toml
chapter02/08_shadowing_types/: Cargo.toml
chapter02/09_mutable_types/: Cargo.toml
chapter02/10_shadow_scope/: Cargo.toml
chapter02/15_integer_overflow/: Cargo.toml
chapter02/16_integer_overflow_methods/: Cargo.toml
chapter02/18_floating_point_precision/: Cargo.toml
chapter02/24_single_double_quotes/: Cargo.toml
chapter02/26_tuples_destructured/: Cargo.toml
chapter02/29_array_element_check/: Cargo.toml
chapter02/34_error_mismatched_types/: Cargo.toml
chapter02/35_error_inference_constraints/: Cargo.toml
chapter02/38_integer_vs_float/: Cargo.toml
chapter02/39_remainder_modulo/: Cargo.toml
chapter02/41_ordering_operators/: Cargo.toml
chapter02/44_compound_assignment_operator/: Cargo.toml
chapter02/45_simple_financial_calculator/: Cargo.toml
chapter02/47_stdin_example/: Cargo.toml
chapter02/48_readline_example/: Cargo.toml
chapter02/54_practical_example_user_profile/: Cargo.toml
chapter02/55_practical_example_interactive_calculator/: Cargo.toml
chapter03/02_if_else_example/: Cargo.toml
chapter03/05_temparature_advisor/: Cargo.toml
chapter03/07_logical_or/: Cargo.toml
chapter03/08_logical_not/: Cargo.toml
chapter03/09_combined_logical_operators/: Cargo.toml
chapter03/13_continous_loop/: Cargo.toml
chapter03/22_practical_example_data_processing_pipeline/: Cargo.toml
chapter03/28_enhanced_calculator_exercise/: Cargo.toml
chapter04/01_basic_function/: Cargo.toml
chapter04/02_simple_functions/: Cargo.toml
chapter04/03_multiple_parameters/: Cargo.toml
chapter04/04_retun_value/: Cargo.toml
chapter04/06_no_return_type/: Cargo.toml
chapter06/05_dereference/: Cargo.toml
chapter17/17_cargo_fuzz_example/fuzz/: Cargo.toml
chapter17/17_cargo_fuzz_example/fuzz/fuzz_targets/: fuzz_add.rs
chapter18/08_filters/: Cargo.toml
chapter18/08_filters/src/: main.rs
chapter19/taskrust/: CHAPTER_CORRECTIONS.md  Cargo.toml  README.md  tasks.json
chapter19/taskrust/examples/: demo.rs
chapter19/taskrust/src/: lib.rs  main.rs  storage.rs  task.rs
chapter19/taskrust/src/commands/: add.rs  complete.rs  delete.rs  export.rs  import.rs  list.rs  mod.rs
chapter19/taskrust/tests/: cli_tests.rs
chapter20/: README.md  demo_system.ps1  demo_system.sh  run_examples.sh
chapter20/taskrust-api/: CHAPTER_SUMMARY.md  Cargo.toml  README.md  test_api.ps1  test_api.sh
chapter20/taskrust-api/src/: config.rs  errors.rs  handlers.rs  main.rs  models.rs  repository.rs
chapter20/taskrust-client/: Cargo.toml  README.md
chapter20/taskrust-client/src/: cli.rs  client.rs  commands.rs  main.rs  models.rs
(+541 files in other folders)
