[package]
name = "taskrust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line task manager written in Rust"
readme = "README.md"
repository = "https://github.com/yourusername/taskrust"
license = "MIT"
keywords = ["cli", "task", "todo", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "taskrust"
path = "src/main.rs"

[lib]
name = "taskrust"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"