[package]
name = "taskrust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }